kustomize-units/kubevirt-manager/kubevirt-manager-np.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: restrict-port-8081
  namespace: kubevirt-manager
spec:
  podSelector:
    matchLabels:
      app: kubevirt-manager
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: kubevirt-manager
      ports:
        - protocol: TCP
          port: 8081
  policyTypes:
    - Ingress
